# Hydra-C2

./: .gitignore  README.md  genesis.sh  hydra_c2.py  server.crt  server.key
Hydra_Project/hydra_android/: build.gradle.kts  deploy.sh  settings.gradle.kts
Hydra_Project/hydra_android/app/: build.gradle.kts
Hydra_Project/hydra_android/app/src/main/: AndroidManifest.xml
Hydra_Project/hydra_android/app/src/main/kotlin/com/hydra/client/: AudioHelper.kt  HydraAccessibilityService.kt  HydraService.kt  LocationHelper.kt  MainActivity.kt
Hydra_Project/hydra_android/app/src/main/res/values/: strings.xml
Hydra_Project/hydra_android/app/src/main/res/xml/: accessibility_service_config.xml  network_security_config.xml
Hydra_Project/hydra_c2/: cert.pem  commander.py  db.py  hydra_heads.db  key.pem  main.py  requirements.txt
Hydra_Project/hydra_c2/exfiltrated/ANDROID-HEAD-01/: exfil_1768243703378.m4a  keys.txt  secrets.txt
Hydra_Project/hydra_c2/exfiltrated/DESKTOP-HEAD-ALPHA/: keys.txt
Hydra_Project/hydra_c2/loot/: tool.sh
Hydra_Project/hydra_desktop/: Cargo.toml  backdoor.txt  exfil_test.txt
Hydra_Project/hydra_desktop/src/: keylogger.rs  main.rs
