[package]
name = "hydra_desktop"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
# HTTP client with TLS 1.3 support
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"